--- a/src/components/Contactme/Contactform/Contactform.css
+++ b/src/components/Contactme/Contactform/Contactform.css
@@ -12,15 +12,25 @@ form {
     display: flex;
     align-items: center;
     /* grid: gap 1.5rem; */
+    /* width: 100%; */
+    box-sizing: border-box;
     gap: 1.5rem
     ;
 }
-
+.name-container *{
+    width: 50%;
+}
+@media screen and (max-width:451px) {
+    .name-container input{
+        width: 100%;
+        box-sizing: border-box;
+    }
+}
 .form input,
 .form textarea {
 
     flex: 1;
-    width: 95%;
+    /* width: 95%; */
     font-size: 0.9rem;
     color: #fff;
     background:  #130f2a;
