--- a/src/components/Skills/SkillsinfoCard/SkillsinfoCard.css
+++ b/src/components/Skills/SkillsinfoCard/SkillsinfoCard.css
@@ -1,6 +1,6 @@
 .skills-info-card{
-    width: 600px;
-    min-height: 23rem;
+    width: 40vw;
+    /* min-height: 20vh; */
     border-radius: 0.65rem;
     border: 1.5px solid #6751b9;
     background: rgba(22, 17, 47, 0.398);
@@ -16,6 +16,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     border-bottom: 1.5px solid #6751b9;
+    margin: 0;
 }
 
 .skills-info-content {
@@ -31,6 +32,7 @@
 .skills-info p {
     font-size: 1rem;
     font-weight: 500;
+    margin: 0;
 }
 
 .skills-info .percentage {
