--- a/src/components/Workexperience/Experiencecard/Experiencecard.css
+++ b/src/components/Workexperience/Experiencecard/Experiencecard.css
@@ -4,6 +4,7 @@
     border: 1.5px solid #6751b9;
     padding: 1.5rem;
     margin: 0 1rem;
+    height: fit-content;
 }
 .work-experience-card h6 {
     font-size: 1.05rem;
