--- a/src/components/Skills/SkillsinfoCard/SkillsinfoCard.css
+++ b/src/components/Skills/SkillsinfoCard/SkillsinfoCard.css
@@ -1,5 +1,5 @@
 .skills-info-card{
-    width: 600px;
+    width: 100%;
     min-height: 23rem;
     border-radius: 0.65rem;
     border: 1.5px solid #6751b9;
