--- a/src/components/Contactme/Contactform/Contactform.css
+++ b/src/components/Contactme/Contactform/Contactform.css
@@ -14,9 +14,9 @@ form {
 
     /* grid: gap 1.5rem; */
     /* width: 100%; */
-    box-sizing: border-box;
+    /* box-sizing: border-box;
 
-}
+} */
 .name-container *{
     width: 50%;
 }
@@ -26,8 +26,7 @@ form {
         box-sizing: border-box;
     }
 }
-.form input,
-.form textarea {
+.input-field {
 
     flex: 1;
     /* width: 95%; */
@@ -65,10 +64,10 @@ form button:hover {
         align-items: flex-start;
     }
 
-    form input,
-    form textarea {
+   .input-field {
         padding: 0.7rem;
         border-radius: 0.3rem;
+        
     }
 
     form button {
@@ -97,8 +96,7 @@ form {
     gap: 1.5rem;
 }
 
-.form input,
-.form textarea {
+.input-field {
     flex: 1;
     width: 95%;
     font-size: 0.9rem;
@@ -130,9 +128,7 @@ form button:hover {
         flex-direction: column;
         align-items: flex-start;
     }
-
-    form input,
-    form textarea {
+.input-field {
         padding: 0.7rem;
         border-radius: 0.3rem;
     }
