--- a/src/components/Contactme/Contactform/Contactform.css
+++ b/src/components/Contactme/Contactform/Contactform.css
@@ -12,11 +12,9 @@ form {
     display: flex;
     align-items: center;
 
-    /* grid: gap 1.5rem; */
-    /* width: 100%; */
-    /* box-sizing: border-box;
+    
 
-} */
+} 
 .name-container *{
     width: 50%;
 }
